--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodecap",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "ICAP server framework for node.js - create custom HTTP proxy filters for Squid, etc.",
   "main": "index.js",
   "directories": {
@@ -13,7 +13,8 @@
     "hexy": "~0.2.5",
     "lodash": "~2.4.1",
     "mmmagic": "~0.3.6",
-    "q": "~1.0.0"
+    "q": "~1.0.0",
+    "winston": "^0.7.3"
   },
   "devDependencies": {
     "tap": "~0.4.8"
