--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodecap",
-  "version": "0.1.3",
+  "name": "nodecap2",
+  "version": "0.2.0",
   "description": "ICAP server framework for node.js - create custom HTTP proxy filters for Squid, etc.",
   "main": "index.js",
   "directories": {
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/josephsavona/nodecap"
+    "url": "https://github.com/horpto/nodecap2"
   },
   "keywords": [
     "nodejs",
@@ -36,6 +36,6 @@
   "author": "Joseph Savona <joe@josephsavona.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/josephsavona/nodecap/issues"
+    "url": "https://github.com/horpto/nodecap2/issues"
   }
 }
